--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,2 @@
-Roleplay ads can be set in the OOC tabs. Toggle Roleplay Ads on to be notified of new postings.
-Critical hits have minimum damage thresholds.
-Loadout items can be selected in the character creation menu.
-Round Contribution Points (RCP) added to all roles apart from Adventurer. You will gain a tenth of that amount as PQ up to a maximum of 10 in total, as long as you gain at least one triumph from sleeping and have joined at least 45 minutes before the end of the round.
+Welcome to Solaris! This initial version is catered to the first scrappings of our lore put to paper to bounce off of you, in particular the gods.
+We hope you have fun with your time in Sunmarch, and remember - yours is a fate few share.
