Update changelog.txt (#59)

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,9 @@
 Welcome back to Solaris!
-God lore has been heavily reworked and expanded. If your god had a placeholder description - check it out now!
-Torches no longer are busted when you douse or craft them. My bad.
-Timechange tips have been significantly expanded and should feel more prescient!
-Adventurers were moved into town for the time being.
+What's not a gnelf? Not a gnoblin? GNOMES! Now playable!
+Pilgrims are now selectable roundstart and via latejoin directly rather than being migrant locked.
+Flag color selection has been expanded significantly, with the default colors now white and gold.
+Botany has been expanded heavily with new crops to work on and with - treats blooming from from each!
+Combat music has been overhauled, alongside more area tracks!
+Potion's color significance has been inverted, and their descriptions less made grim-dark-ish.
+
+Have fun!
