A more high-effort readme (#130)

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,14 +1,12 @@
 Welcome back to Solaris Ridge!
+What a week, huh? -- What do you mean it's tuesday?!
 
-Your... pintle, should you have one. Should look slightly more refined. If you can be after saying the word 'Pintle', anyways. Pintle.
-The 'People I Know' menu now displays remembered species.
-Salted fish now have sprites! Oops.
-A significant expansion to drinks and brewing has been merged!
-Characters with low strength can no longer immediately slip out of nets.
-The keep is no longer AA. How did I miss that?!
-Doors now rely on mapping access helpers for their lockid!
-Deathsight and Signal Horns should be slightly more specific, if not cryptic.
-Constructs can now play any job!
-Mappers are getting whimsical with new tree-based turfs to play with.
-Gunsmithing has become significantly more proficient - and less expensive - QOL-wise.
-And, finally - one of the dungeons has been moved, made harder, and redesigned. I see you.
+Playtime Tracking has been re-enabled; pending further usage. The initial month's worth of uptime was not backdated.
+THE SKELETON ARMY APPEARS... Necromancers have been fixed up quite substantially.
+Becoming a deadite no longer makes you non-organic. Or non-synthetic. Or just non anything, really.
+Clocks no longer incorrectly refer to days of the week that are not real, and cannot hurt you.
+Another new dungeon has been added to the map! Surely, nothing nefarious lurks inside...
+It would be really funny if you aerosolized the fixed-up stamina potions.
+QUARTZ RINGS ARE NO LONGER INVISIBLE...
+
+Have fun!
