Changelog & Skin Redo (#149)
* Changelog & Skin Redo

* chat darker

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,25 +1,8 @@
 Welcome back to Solaris Ridge!
 
-Gee, Bill, how come Solaris let you have TWO magic reworks? A quick breakdown:
-All the magic updates we missed out on from Azure Peak have been backported.
-Fatigue-Based XP Grinding has been reworked!
-The SCOM requires some familiarity with magic to craft.
-Spell point's exact allocation have been shifted about the town a bit!
-Arcane Potential was reworked... Again! Again!
-Master-Level Arcanists can entrust their knowledge to a pupil... or two. Or three.
-Staffs now drop their components upon destruction. Don't get any funny ideas about how to use this...
-Adventurer Clerics & Mages were let into the Adventurer's Guild following a lawsuit. Quoting the Archmagister, "POWER WORD: CEDE".
-Adventurer Clerics were therein buffed significantly WRT their magics.
-The Alchemist jobrole in the Mage's University has been disabled for the moment.
-
-Asides from Magic:
-Deacons & Iconoclasts now get Psycrosses, oopsies.
-Cooking has been expANDED AGAIN?!
-I loved it when the alchemical mortar went "it's mortarin' time" and mortar'd all over the place with the flour and whatnot
-One (1) orc skintone has been recolored
-A new issue with wildshape was solemnly added to Fuckup Of The Year 2025.
-Templar and Acolyte Tamarites were buffed.
-The default laws of the land have been rewritten to be feasible in-setting.
-Don't get any funny ideas with the new mess kit, Alchemists... oh; wait.
+We're testing the first rounds of our newer tileset! Visibility should be drastically upped, no matter where you go.
+The ENTIRE game's HTML/CSS skin has been revamped in this vain as well. THe actual HUD has remained untouched so far.
+These are the 'monster' changes for the time being, the big ones.
+Nearly every spell in the game now has some form of feedback for casting.
 
 Have fun!
